crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__string_literal_recovery_7.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"'\\n\")"
---
Node {
    node: StringLit(
        StringLit {
            is_long_string: false,
            raw_value: "'\n",
            value: "",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}
