crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__subscript_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"a[b;;b]\"#)"
---
Node {
    node: Subscript(
        Subscript {
            value: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "a",
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            index: Some(
                Node {
                    node: Identifier(
                        Identifier {
                            names: [
                                Node {
                                    node: "b",
                                    filename: "",
                                    line: 1,
                                    column: 5,
                                    end_line: 1,
                                    end_column: 6,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 5,
                    end_line: 1,
                    end_column: 6,
                },
            ),
            lower: None,
            upper: None,
            step: None,
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}
